tests/integration/setup/jest.e2e.setup.ts
// Integration tests setup
import '@testing-library/jest-dom';

// Mock environment variables for tests
process.env.NEXT_PUBLIC_SUPABASE_URL = 'https://test.supabase.co';
process.env.NEXT_PUBLIC_SUPABASE_ANON_KEY = 'test-anon-key';

// Global test configuration
global.console = {
  ...console,
  // Uncomment to disable console logs in tests
  // log: jest.fn(),
  // debug: jest.fn(),
  // info: jest.fn(),
  // warn: jest.fn(),
  // error: jest.fn(),
};

// Setup global mocks
beforeEach(() => {
  jest.clearAllMocks();
});